# nemesis-vtk

./: .gitignore  CMakeClean.sh  CMakeLists.txt  Nemesis18.x.files  Nemesis18.x.includes  Nemesis19.x-vtk.files  Nemesis19.x-vtk.includes  README.md  UpdateGitVersion
etc/: CMakeLists.txt
etc/desktop/{BUILD_PROJECT#b64d16f0-b73f-4747-9a13-212ab9a15d38}/: default.dsk  mainwindow.xml  tools_menu.xml
etc/desktop/{CHEMINFO_PROJECT#afb4ea80-56f9-4e1d-8121-89b2f277c82c}/: default.dsk
etc/desktop/{COLLAB_PROJECT#c08213de-7079-43a3-8620-958edb6808af}/: default.dsk
etc/desktop/{DOCKING_PROJECT#48bddbcd-7158-47be-8ff1-09a79989e52e}/: default.dsk  tools_menu.xml
etc/desktop/{LEAP_PROJECT#ebe3c3d4-f600-4f19-83a2-05f15e22e21a}/: tools_menu.xml
etc/desktop/{SKETCH_PROJECT#6b047926-9a91-4e5f-884a-500db358ddb2}/: mainwindow.xml  tools_menu.xml
etc/desktop/{TRAJECTORY_PROJECT#c4dd64d9-da20-413d-a2df-6f38697e4d2d}/: default.dsk  tools_menu.xml
etc/graphics/: colors.xml  default.xml
etc/plugins/: ConnectPlugins.sh
etc/plugins/definitions/: Amber.plg  BioModels.plg  BioTools.plg  BuildProject.plg  CATsProject.bld  CPMD.plg  CheminfoProject.plg  CollabProject.plg  CrystalTools.plg  DockingProject.plg  ExtraImpex.plg  ExtraTools.plg  GlobalWorkPanels.plg  NemesisCore.plg  OpenBabel.plg  RMSDTools.plg  SketchProject.plg  StandardWorkPanels.plg  TrajectoryProject.plg  Turbomole.plg
etc/workpanels/{BUILD_WORK_PANEL#e5c311d6-73f7-4091-a6e3-1d73024fe27d}/: basic.xml
etc/workpanels/{DOCKING_WORK_PANEL#10ee3f51-9e18-45c0-827c-5d65f161c535}/: general.xml
etc/workpanels/{STRUCTURE_PALETTE_WORK_PANEL#4055ad4a-4b46-4130-bad3-9192dee5c512}/: hexoses.xml  pentoses.xml
share/: CMakeLists.txt
share/ketcher/1.0.b4/: ketcher.css  ketcher.html  ketcher.js
share/logo/: README  nemesis_blue_strelcova.xcf
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/NemesisCore/: CMakeLists.txt  NemesisCore.qrc  NemesisCoreMainHeader.cpp  NemesisCoreMainHeader.hpp  NemesisCoreMainHeaderConfig.hpp  NemesisCoreModule.cpp  NemesisCoreModule.hpp
src/lib/plusula/: CMakeLists.txt  ComObject.cpp  ComObject.hpp  ExtUUID.cpp  ExtUUID.hpp  PluSuLaMainHeader.cpp  PluSuLaMainHeader.hpp  PluginDatabase.cpp  PluginDatabase.hpp  PluginModule.cpp  PluginModule.hpp  PluginObject.cpp  PluginObject.hpp
src/plugins/: CMakeLists.txt
src/plugins/Amber/: AmberImportJob.hpp  AmberImportTool.hpp  AmberMainHeader.hpp  AmberModule.hpp  CMakeLists.txt  ChargesImportJob.cpp  ChargesImportJob.hpp  ChargesImportTool.cpp  GESPAsRESPImportJob.cpp  GESPAsRESPImportJob.hpp  GESPAsRESPImportTool.cpp  GESPAsRESPImportTool.hpp  GESPAsRESPImportTool.ui  GESPGridObject.cpp  GESPGridObject.hpp  GESPGridObjectDesigner.cpp  GESPGridObjectDesigner.hpp  GESPGridObjectDesigner.ui  GESPGridSetupDesigner.cpp  GESPGridSetupDesigner.hpp  GESPGridSetupDesigner.ui  GESPImportJob.cpp  GESPImportJob.hpp  GESPImportTool.cpp  GESPImportTool.hpp  GESPImportTool.ui  GESPReader.files  LeapCmds.cpp  LeapProject.cpp  LeapProject.hpp  LeapProjectDesigner.cpp  LeapProjectDesigner.hpp  LeapProjectDesigner.ui  LeapProjectWindow.cpp  LeapProjectWindow.hpp  LeapProjectWindow.ui  LeapProjectWindowEdit.cpp  Rst7ExportTool.hpp  Rst7ExportTool.ui  TopologyImportTool.hpp  (+1 more)
src/plugins/BioModels/: BioModelsMainHeader.cpp  BioModelsMainHeader.hpp  BioModelsModule.cpp  BioModelsModule.hpp  CMakeLists.txt
src/plugins/BioTools/: BioToolsMainHeader.cpp  BioToolsMainHeader.hpp  BioToolsModule.cpp  BioToolsModule.hpp  BioToolsModule.qrc  CMakeLists.txt  ResidueListWorkPanel.cpp  ResidueListWorkPanel.ui  ResidueWorkPanel.hpp  StructurePaletteWorkPanel.hpp  StructurePaletteWorkPanel.ui
src/plugins/BuildProject/: BuildProject.hpp  BuildProject.qrc  BuildProjectDesigner.cpp  BuildProjectDesigner.hpp  BuildProjectDesigner.ui  BuildProjectModule.cpp  BuildProjectWindow.cpp  CMakeLists.txt
src/plugins/CATsProject/: CATsProject.cpp  CATsProject.files  CATsProject.hpp  CATsProject.qrc  CATsProjectMainHeader.cpp  CATsProjectMainHeader.hpp  CATsProjectModule.cpp  CATsProjectModule.hpp  CATsProjectWindow.cpp  CATsProjectWindow.hpp  CATsProjectWindow.ui  CATsProjectWindow_backup.ui  CATsProjectWindow_o.ui  CMakeLists.txt  qdebugstream.hpp  scriptthread.hpp
src/plugins/CATsProjectTest/: CATs.pro  mainwindow.cpp  scriptthread.hpp
src/plugins/CPMD/: CMakeLists.txt  CPMDInputExportTool.cpp  CPMDInputExportTool.ui  CPMDMainHeader.cpp  CPMDModule.qrc
src/plugins/CheminfoProject/: CMakeLists.txt  CheminfoProject.cpp  CheminfoProject.hpp  CheminfoProject.qrc  CheminfoProjectDatabase.cpp  CheminfoProjectDatabase.hpp  CheminfoProjectDatabaseStructure.cpp  CheminfoProjectDatabaseStructure.hpp  CheminfoProjectDesigner.cpp  CheminfoProjectDesigner.hpp  CheminfoProjectDesigner.ui  CheminfoProjectInfo.cpp  CheminfoProjectInfo.hpp  CheminfoProjectInfoDesigner.cpp  CheminfoProjectInfoDesigner.hpp  CheminfoProjectInfoDesigner.ui  CheminfoProjectInfoList.cpp  CheminfoProjectInfoList.hpp  CheminfoProjectInfoListDesigner.cpp  CheminfoProjectInfoListDesigner.hpp  CheminfoProjectInfoListDesigner.ui  CheminfoProjectMainHeader.cpp  CheminfoProjectMainHeader.hpp  CheminfoProjectModule.cpp  CheminfoProjectModule.hpp  CheminfoProjectSetDatabase.cpp  CheminfoProjectSetDatabase.hpp  CheminfoProjectSetDatabase.ui  CheminfoProjectSetDatabaseStructure.cpp  CheminfoProjectSetDatabaseStructure.hpp  CheminfoProjectSetDatabaseStructure.ui  CheminfoProjectStructure.cpp  CheminfoProjectStructure.hpp  CheminfoProjectStructureDesigner.cpp  CheminfoProjectStructureDesigner.hpp  CheminfoProjectStructureDesigner.ui  CheminfoProjectStructureList.cpp  CheminfoProjectStructureList.hpp  CheminfoProjectStructureListDesigner.cpp  CheminfoProjectStructureListDesigner.hpp  (+9 more)
src/plugins/CrystalTools/: CMakeLists.txt  CrystalToolsMainHeader.cpp  CrystalToolsMainHeader.hpp  CrystalToolsModule.cpp  CrystalToolsModule.hpp  CrystalToolsModule.qrc  SuperCellBuilderWorkPanel.cpp  SuperCellBuilderWorkPanel.hpp  SuperCellBuilderWorkPanel.ui
src/plugins/DockingProject/: CMakeLists.txt  DockingProject.cpp  DockingProject.hpp  (+45 more)
(+1342 files in other folders)
