# ==============================================================================
# Nemesis CMake File
# ==============================================================================

INSTALL(DIRECTORY
            ketcher
        DESTINATION
            share
        )

INSTALL(DIRECTORY
            fonts
        DESTINATION
            share
        )


