# ==============================================================================
# Nemesis CMake File
# ==============================================================================

# plugin subsystem -------------------------------
ADD_SUBDIRECTORY(plusula)

# core subsystems --------------------------------
ADD_SUBDIRECTORY(NemesisCore)


