# ==============================================================================
# Nemesis CMake File
# ==============================================================================

ADD_SUBDIRECTORY(impex)
ADD_SUBDIRECTORY(interfaces)
ADD_SUBDIRECTORY(projects)
ADD_SUBDIRECTORY(properties)
ADD_SUBDIRECTORY(workpanels)
